--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,22 @@
 @import './list.css';
 
+html {
+    font-size: 15px;
+}
+
+nav {
+    position: fixed !important;
+    top: 0;
+    z-index: 10000;
+    background-color: white;
+    width: 100%
+}
+
+.container {
+    margin-top: 5rem;
+    margin-bottom: 1rem;
+}
+
 .loader,
 .loader:before,
 .loader:after {
@@ -56,4 +73,8 @@
     40% {
         box-shadow: 0 2.5em 0 0;
     }
+}
+
+.cursor-pointer {
+    cursor: pointer;
 }
