--- a/css/loader.css
+++ b/css/loader.css
@@ -1,3 +1,10 @@
+.loader-container {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0,0,0, 0.15);
+}
 .loader,
 .loader:before,
 .loader:after {
