--- a/css/global.css
+++ b/css/global.css
@@ -14,9 +14,26 @@ nav {
     width: 100%
 }
 
+.footer {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #fff;
+    box-shadow: 0 -0.125rem 0.25rem rgba(0,0,0,.075);
+}
+
+.footer .container-fluid {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 .container {
     margin-top: 5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
 }
 
 .dropdown-menu.show {
