--- a/css/list.css
+++ b/css/list.css
@@ -1,8 +1,8 @@
 .cart-section {
     width: 100%;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between; */
     position: absolute;
     top: 0;
     top: -42px;
@@ -26,4 +26,13 @@
     position: absolute;
     top: -2px;
     right: -7px;
+}
+
+.circle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
 }
