--- a/css/global.css
+++ b/css/global.css
@@ -78,3 +78,10 @@ img.checkout-image {
 .login-container {
     top: 20%;
 }
+
+.fa-trash-alt {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: 0.75rem;
+}
