Sanitizing the files before rendering the ui

--- a/css/global.css
+++ b/css/global.css
@@ -8,6 +8,10 @@ html {
     position: relative;
 }
 
+body {
+    background-color: #f8f8f8 !important;
+}
+
 nav {
     position: fixed !important;
     top: 0;
