--- a/css/list.css
+++ b/css/list.css
@@ -1,13 +1,18 @@
 .cart-section {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    padding: 0.75rem 0.25rem;
+    visibility: hidden;
+    opacity: 0;
     position: absolute;
-    top: 0;
-    top: -42px;
-    left: 0px;
-    background-color: white;
+    top: -2.25rem;
+    right: 0;
+}
+
+.product-container:hover .cart-section{
+    visibility: visible;
+    opacity: 1;
+    top: -3rem;
+    right: 0;
+    transition: all 0.25s ease-in;
 }
 
 .cart-section input {
