--- a/css/list.css
+++ b/css/list.css
@@ -3,16 +3,20 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    top: -2.25rem;
+    bottom: 3.8rem;
     right: 0;
 }
 
 .product-container:hover .cart-section{
     visibility: visible;
     opacity: 1;
-    top: -3rem;
-    right: 0;
-    transition: all 0.25s ease-in;
+    transform: translate(0, -0.4rem);
+    transition: transform 0.25s ease-in;
+}
+
+.product-container:hover img {
+    opacity: 0.85;
+    transition: opacity 0.3s ease-in;
 }
 
 .cart-section input {
